--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@auth/prisma-adapter": "^1.4.0",
     "@prisma/client": "^5.10.2",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.25.0",
     "@trpc/client": "next",
@@ -23,12 +24,17 @@
     "@trpc/server": "next",
     "@web3modal/siwe": "^4.1.11",
     "@web3modal/wagmi": "^4.1.11",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.373.0",
     "next": "^14.2.1",
     "next-auth": "^4.24.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "siwe": "^2.3.2",
     "superjson": "^2.2.1",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "wagmi": "^2.5.22",
     "zod": "^3.23.3"
   },
@@ -39,6 +45,7 @@
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
+    "daisyui": "^4.10.2",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.1.3",
     "postcss": "^8.4.34",
