--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,9 @@
   },
   "homepage": "https://github.com/Open-Tribe-DAO/open-tribe#readme",
   "devDependencies": {
+    "@nomicfoundation/hardhat-ethers": "^3.0.5",
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "ethers": "^6.12.0",
     "hardhat": "^2.22.3"
   },
   "dependencies": {
