--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,7 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
-    "@tanstack/react-query": "^5.25.0",
+    "@tanstack/react-query": "^5.32.0",
     "@trpc/client": "next",
     "@trpc/next": "next",
     "@trpc/react-query": "next",
@@ -39,7 +39,9 @@
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "wagmi": "^2.5.22",
+    "viem": "^2.9.28",
+    "wagmi": "^2.6.0",
+    "web3": "^4.8.0",
     "zod": "^3.23.4"
   },
   "devDependencies": {
