--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "thirdweb": "^5.13.0",
     "viem": "^2.9.28",
     "wagmi": "^2.6.0",
     "web3": "^4.8.0",
@@ -59,7 +60,7 @@
     "prettier-plugin-tailwindcss": "^0.5.11",
     "prisma": "^5.10.2",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.4.2"
+    "typescript": "^5.0.4"
   },
   "ct3aMetadata": {
     "initVersion": "7.32.0"
