--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "hardhat": "^2.22.3"
   },
   "dependencies": {
+    "@chainlink/contracts": "^0.8.0",
     "@openzeppelin/contracts": "^5.0.2",
     "dotenv": "^16.4.5"
   }
