--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -11,15 +11,13 @@
 
 # Prisma
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
-DATABASE_URL="postgresql://postgres:password@localhost:5432/open-tribe"
-
-# Next Auth
-# You can generate a new secret on the command line with:
-# openssl rand -base64 32
-# https://next-auth.js.org/configuration/options#secret
-# NEXTAUTH_SECRET=""
-NEXTAUTH_URL="http://localhost:3000"
-
-# Next Auth Discord Provider
-DISCORD_CLIENT_ID=""
-DISCORD_CLIENT_SECRET=""
+DATABASE_URL=
+NEXTAUTH_SECRET=
+NEXTAUTH_URL=
+NEXT_PUBLIC_COVALENT_API_KEY=
+NEXT_PUBLIC_PROJECT_ID=
+NEXT_PUBLIC_THIRDWEB_CLIENT_ID=
+NEXT_PUBLIC_THIRDWEB_SECRET_KEY=
+NEXT_PUBLIC_CLOUDFLARE_WORKER_URL=
+NEXT_PUBLIC_CLOUDFLARE_AUTH_KEY_SECRET=
+NEXT_PUBLIC_CLOUDFLARE_R2_URL=
